--- a/shell-roboshop-main/cart.service
+++ b/shell-roboshop-main/cart.service
@@ -3,8 +3,8 @@ Description = Cart Service
 [Service]
 User=roboshop
 // highlight-start
-Environment=REDIS_HOST=redis.monnish.com
-Environment=CATALOGUE_HOST=catalogue.monnish.com
+Environment=REDIS_HOST=redis.daws84s.site
+Environment=CATALOGUE_HOST=catalogue.daws84s.site
 Environment=CATALOGUE_PORT=8080
 // highlight-end
 ExecStart=/bin/node /app/server.js
