--- a/shell-roboshop-main/shipping.service
+++ b/shell-roboshop-main/shipping.service
@@ -4,8 +4,8 @@ Description=Shipping Service
 [Service]
 User=roboshop
 // highlight-start
-Environment=CART_ENDPOINT=cart.monnish.com:8080
-Environment=DB_HOST=mysql.monnish.com
+Environment=CART_ENDPOINT=cart.daws84s.site:8080
+Environment=DB_HOST=mysql.daws84s.site
 // highlight-end
 ExecStart=/bin/java -jar /app/shipping.jar
 SyslogIdentifier=shipping
