--- a/shell-roboshop-main/user.service
+++ b/shell-roboshop-main/user.service
@@ -4,8 +4,8 @@ Description = User Service
 User=roboshop
 Environment=MONGO=true
 // highlight-start
-Environment=REDIS_URL='redis://redis.monnish.com:6379'
-Environment=MONGO_URL="mongodb://mongodb.monnish.com:27017/users"
+Environment=REDIS_URL='redis://redis.daws84s.site:6379'
+Environment=MONGO_URL="mongodb://mongodb.daws84s.site:27017/users"
 // highlight-end
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
