--- a/shell-roboshop-main/catalogue.service
+++ b/shell-roboshop-main/catalogue.service
@@ -3,9 +3,9 @@ Description = Catalogue Service
 
 [Service]
 User=roboshop
-Environment=MONGO=true
+
 // highlight-start
-Environment=MONGO_URL="mongodb://mongodb.monnish.com:27017/catalogue"
+Environment=MONGO="mongodb://mongodb.monnish.com:27017/catalogue"
 // highlight-end
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=catalogue
